--- a/src/Styles/Auth.css
+++ b/src/Styles/Auth.css
@@ -60,3 +60,70 @@
   border-bottom: 1px solid #acacac;
   margin: auto;
 }
+
+#Auth form {
+  width: 100%;
+  overflow: hidden;
+  padding: 20px 30px;
+}
+
+#Auth form label {
+  font-weight: 400;
+  color: #555;
+  font-size: 0.9rem;
+  display: flex;
+  letter-spacing: 1px;
+  margin: 5px 0;
+}
+
+#Auth form label span {
+  color: #d82710;
+  font-size: 1.1rem;
+  font-weight: 800;
+}
+
+#Auth form .input-group {
+  width: 100%;
+  height: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid #acacac;
+  margin-bottom: 20px;
+}
+
+#Auth form .input-group input {
+  width: 100%;
+  height: 100%;
+  border: none;
+  outline: none;
+}
+
+#Auth form .input-group i {
+  width: 40px;
+  height: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-right: 1px solid #acacac;
+  color: #555;
+}
+
+#Auth form .btns {
+  width: 100%;
+  height: 45px;
+  display: flex;
+  gap: 10px;
+  margin-top: 25px;
+  margin-bottom: 15px;
+}
+
+#Auth form .btns button {
+  width: 100%;
+  height: 100%;
+  background: #e8505b;
+  color: #fff;
+  font-weight: 500;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+}
