--- a/src/Styles/Auth.css
+++ b/src/Styles/Auth.css
@@ -127,3 +127,33 @@
   letter-spacing: 1px;
   text-transform: uppercase;
 }
+
+#Auth form .forget {
+  color: #333;
+  letter-spacing: 0.5px;
+  text-decoration: capitalize;
+  font-weight: 400;
+  font-size: 0.9rem;
+}
+
+#Auth .intro-text {
+  width: 90%;
+  text-align: center;
+  border-top: 1px solid #acacac;
+  margin: auto;
+}
+
+#Auth .intro-text span {
+  display: inline-block;
+  font-weight: 600;
+  color: #222;
+  font-size: 1.1rem;
+  text-transform: uppercase;
+  margin-top: 20px;
+}
+
+#Auth .intro-text p {
+  color: #7e7e7e;
+  margin: 7px 0;
+  font-size: 0.85rem;
+}
