--- a/src/Styles/Auth.css
+++ b/src/Styles/Auth.css
@@ -210,6 +210,7 @@
   background: #e8505b;
   border-color: #e8505b;
   color: #fff;
+  transition-delay: 0.3s;
 }
 
 #Auth .register .progress-bar ul .progress {
@@ -220,6 +221,7 @@
 
 #Auth .register .progress-bar ul li.active::before {
   color: #e8505b;
+  transition-delay: 0.3s;
 }
 
 #Auth .register .wrapper {
