--- a/src/Styles/Home.css
+++ b/src/Styles/Home.css
@@ -7,6 +7,11 @@
   background-size: 500px;
   background-position: center;
   overflow: hidden;
+  transition: margin-left 0.5s;
+}
+
+#Home.active {
+  margin-left: -180px;
 }
 
 #Home .container {
